--- a/requirements.txt
+++ b/requirements.txt
@@ -34,4 +34,12 @@ Jinja2~=3.1.5
 async-timeout~=5.0.1
 python-dotenv~=1.0.1
 pydantic-settings~=2.7.1
-python-multipart
+python-multipart~=0.0.20
+
+pytest~=8.3.4
+httpcore~=1.0.7
+httpx~=0.28.1
+config~=0.5.1
+fakeredis~=2.26.2
+pytest-mock~=3.14.0
+alembic~=1.14.1
